--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/ai-form-recognizer": "^4.0.0",
+    "@azure/ai-form-recognizer": "4.0.0-beta.4",
     "@azure/identity": "^3.1.3",
-    "dotenv": "^16.0.3"
+    "docx-pdf": "^0.0.1",
+    "dotenv": "^16.0.3",
+    "lodash": "^4.17.21"
   }
 }
